hphp/test/slow/dot_hack/shebang_with_header.hack.expectf
Fatal error: Leading markup and `<?hh` are not permitted in `.hack` files, which are always strict. in %s/shebang_with_header.hack on line 1
